--- a/app/src/main/res/layout/addcategory_layout.xml
+++ b/app/src/main/res/layout/addcategory_layout.xml
@@ -8,16 +8,15 @@
     tools:context=".Activities.AddCategoryActivity"
     android:orientation="vertical"
     android:padding="30dp"
-    android:background="@color/colorPrimary"
-    >
+    android:background="@color/colorPrimary" >
 
     <ImageView
         android:id="@+id/img_addcategory_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        android:padding="5dp"
-        />
+        android:padding="5dp" />
+
     <TextView
         android:id="@+id/txt_addcategory_title"
         android:layout_width="wrap_content"
@@ -28,22 +27,20 @@
         android:fontFamily="@font/muli_black"
         android:textColor="@color/black"
         android:textAllCaps="true"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_marginTop="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="30dp"
-        >
+        android:layout_marginTop="30dp" >
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtl_addcategory_TenLoai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Nhập tên loại"
+            android:hint="Nhập tên thực đơn"
             app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/black"
             app:boxStrokeWidthFocused="2dp"
@@ -51,15 +48,15 @@
             app:endIconTint="@color/black"
             app:endIconMode="clear_text"
             android:textColorHint="@color/black"
-            app:startIconTint="@color/black"
-            >
+            app:startIconTint="@color/black" >
+
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:fontFamily="@font/muli"
-                android:inputType="text"
-                />
+                android:inputType="text" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
@@ -78,12 +75,10 @@
             android:background="@color/black"
             android:backgroundTint="@color/black"
             android:elevation="5dp"
-            android:text="Thêm Loại"
+            android:text="Thêm thực đơn"
             android:textColor="@color/white"
-            app:backgroundTint="@color/black"
-            />
+            app:backgroundTint="@color/black" />
 
     </LinearLayout>
-
 
 </LinearLayout>
