--- a/app/src/main/res/layout/addstaff_layout.xml
+++ b/app/src/main/res/layout/addstaff_layout.xml
@@ -10,27 +10,25 @@
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:transitionName="transition_signup"
-    android:id="@+id/AddStaff"
-    >
+    android:id="@+id/AddStaff" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical" >
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content" >
+
             <ImageView
                 android:id="@+id/img_addstaff_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_back_24"
                 android:padding="5dp"
-                android:layout_centerVertical="true"
-                />
+                android:layout_centerVertical="true" />
+
             <TextView
                 android:id="@+id/txt_addstaff_title"
                 android:layout_width="wrap_content"
@@ -41,8 +39,7 @@
                 android:textSize="30sp"
                 android:paddingLeft="15dp"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_addstaff_back"
-                />
+                android:layout_toRightOf="@+id/img_addstaff_back" />
 
         </RelativeLayout>
 
@@ -50,13 +47,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            >
+            android:layout_marginTop="20dp" >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content" >
                 <TextView
                     android:id="@+id/txt_addstaff_Permission"
                     android:layout_width="wrap_content"
@@ -64,8 +59,7 @@
                     android:text="Quyền:"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:layout_centerVertical="true"
-                    />
+                    android:layout_centerVertical="true" />
 
                 <RadioGroup
                     android:id="@+id/rg_addstaff_Quyen"
@@ -74,8 +68,7 @@
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
                     android:layout_toRightOf="@id/txt_addstaff_Permission"
-                    android:layout_centerVertical="true"
-                    >
+                    android:layout_centerVertical="true" >
 
                     <RadioButton
                         android:id="@+id/rd_addstaff_QuanLy"
@@ -83,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:text="Quản lý"
                         android:textSize="16sp"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp" />
 
                     <RadioButton
                         android:id="@+id/rd_addstaff_NhanVien"
@@ -91,11 +84,11 @@
                         android:layout_height="wrap_content"
                         android:text="Nhân viên"
                         android:textSize="16sp"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp" />
 
                 </RadioGroup>
-            </RelativeLayout>
 
+            </RelativeLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_addstaff_HoVaTen"
@@ -110,15 +103,15 @@
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:boxStrokeWidthFocused="2dp"
-                app:boxStrokeColor="@color/black"
-                >
+                app:boxStrokeColor="@color/black" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text"
-                    />
+                    android:inputType="text" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_addstaff_TenDN"
                 android:layout_width="match_parent"
@@ -132,15 +125,15 @@
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:boxStrokeWidthFocused="2dp"
-                app:boxStrokeColor="@color/black"
-                >
+                app:boxStrokeColor="@color/black" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text"
-                    />
+                    android:inputType="text" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_addstaff_Email"
                 android:layout_width="match_parent"
@@ -154,15 +147,15 @@
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:boxStrokeWidthFocused="2dp"
-                app:boxStrokeColor="@color/black"
-                >
+                app:boxStrokeColor="@color/black" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
-                    />
+                    android:inputType="textEmailAddress" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_addstaff_SDT"
                 android:layout_width="match_parent"
@@ -176,15 +169,15 @@
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:boxStrokeWidthFocused="2dp"
-                app:boxStrokeColor="@color/black"
-                >
+                app:boxStrokeColor="@color/black" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="phone"
-                    />
+                    android:inputType="phone" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_addstaff_MatKhau"
                 android:layout_width="match_parent"
@@ -199,20 +192,20 @@
                 app:passwordToggleTint="@color/black"
                 app:endIconTint="@color/black"
                 app:boxStrokeWidthFocused="2dp"
-                app:boxStrokeColor="@color/black"
-                >
+                app:boxStrokeColor="@color/black" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textPassword"
-                    />
+                    android:inputType="textPassword" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                >
+                android:layout_marginTop="15dp" >
+
                 <TextView
                     android:id="@+id/txt_addstaff_Gender"
                     android:layout_width="wrap_content"
@@ -220,8 +213,7 @@
                     android:text="Giới tính:"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:layout_centerVertical="true"
-                    />
+                    android:layout_centerVertical="true" />
 
                 <RadioGroup
                     android:id="@+id/rg_addstaff_GioiTinh"
@@ -230,32 +222,31 @@
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
                     android:layout_toRightOf="@id/txt_addstaff_Gender"
-                    android:layout_centerVertical="true"
-                    >
+                    android:layout_centerVertical="true" >
 
                     <RadioButton
                         android:id="@+id/rd_addstaff_Nam"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nam"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp" />
 
                     <RadioButton
                         android:id="@+id/rd_addstaff_Nu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nữ"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp" />
 
                     <RadioButton
                         android:id="@+id/rd_addstaff_Khac"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Khác" />
+
                 </RadioGroup>
+
             </RelativeLayout>
-
-
 
             <DatePicker
                 android:id="@+id/dt_addstaff_NgaySinh"
@@ -263,8 +254,8 @@
                 android:layout_height="190dp"
                 android:datePickerMode="spinner"
                 android:calendarViewShown="false"
-                android:spinnersShown="true"
-                />
+                android:spinnersShown="true" />
+
         </LinearLayout>
 
         <Button
@@ -278,8 +269,8 @@
             android:text="Thêm nhân viên"
             android:textSize="16sp"
             android:textColor="@color/white"
-            app:backgroundTint="@color/black"
-            />
+            app:backgroundTint="@color/black" />
+
     </LinearLayout>
 
 </ScrollView>
