--- a/app/src/main/res/layout/custom_layout_displaycategory.xml
+++ b/app/src/main/res/layout/custom_layout_displaycategory.xml
@@ -5,30 +5,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/lightwhite"
     app:cardCornerRadius="25dp"
-    android:layout_margin="10dp"
-    >
+    android:layout_margin="10dp" >
+
     <ImageView
         android:id="@+id/img_customcategory_HinhLoai"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/pic_cate"
-        android:scaleType="fitXY"
-        />
+        android:scaleType="fitXY" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/txt_customcategory_TenLoai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_corner_categorytext"
-            android:padding="8dp"
             android:layout_margin="25dp"
-            android:textColor="@color/black"
+            android:background="@drawable/round_corner_categorytext"
             android:fontFamily="@font/muli_black"
+            android:padding="8dp"
             android:text="Tên loại"
+            android:textColor="@color/black"
             android:textSize="25sp" />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
