--- a/app/src/main/res/layout/custom_layout_displaystaff.xml
+++ b/app/src/main/res/layout/custom_layout_displaystaff.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="30dp"
-    app:cardElevation="10dp"
-    >
+    app:cardElevation="10dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,8 +13,7 @@
         android:paddingTop="20dp"
         android:layout_margin="10px"
         android:paddingBottom="20dp"
-        android:background="@color/colorPrimary"
-        >
+        android:background="@color/colorPrimary" >
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_customstaff_HinhNV"
@@ -25,14 +23,15 @@
             android:src="@drawable/ic_baseline_person_24"
             app:civ_border_width="3dp"
             app:civ_circle_background_color="@color/white" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/img_customstaff_HinhNV"
             android:layout_centerVertical="true"
             android:orientation="vertical"
-            android:paddingLeft="15dp"
-            >
+            android:paddingLeft="15dp" >
+
             <TextView
                 android:id="@+id/txt_customstaff_TenNV"
                 android:layout_width="wrap_content"
@@ -41,8 +40,8 @@
                 android:gravity="left"
                 android:fontFamily="@font/muli_black"
                 android:textSize="24sp"
-                android:textColor="@color/black"
-                />
+                android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/txt_customstaff_TenQuyen"
                 android:layout_width="wrap_content"
@@ -51,8 +50,7 @@
                 android:gravity="left"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:fontFamily="@font/muli"
-                />
+                android:fontFamily="@font/muli" />
 
             <TextView
                 android:id="@+id/txt_customstaff_SDT"
@@ -62,8 +60,8 @@
                 android:gravity="left"
                 android:textColor="@color/black"
                 android:fontFamily="@font/muli"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/txt_customstaff_Email"
                 android:layout_width="wrap_content"
@@ -72,11 +70,9 @@
                 android:gravity="left"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:fontFamily="@font/muli"
-                />
+                android:fontFamily="@font/muli" />
 
         </LinearLayout>
-
 
     </RelativeLayout>
 
