--- a/app/src/main/res/layout/custom_layout_displaystatistic.xml
+++ b/app/src/main/res/layout/custom_layout_displaystatistic.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    >
+    android:paddingRight="5dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,8 +12,7 @@
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
         android:background="@color/colorPrimary"
-        android:layout_marginBottom="7dp"
-        >
+        android:layout_marginBottom="7dp" >
 
         <TextView
             android:id="@+id/txt_customstatistic_MaDon"
@@ -55,8 +53,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        >
+        android:paddingBottom="10dp" >
 
         <TextView
             android:id="@+id/txt_customstatistic_TenNV"
@@ -73,10 +70,10 @@
             android:id="@+id/txt_customstatistic_BanDat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
             android:layout_below="@id/txt_customstatistic_TenNV"
             android:layout_marginLeft="10dp"
-            android:text="SHOPEE"
+            android:gravity="left"
+            android:text="Bàn 1"
             android:textSize="18sp" />
 
         <TextView
@@ -104,6 +101,7 @@
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
 
 </LinearLayout>
