--- a/app/src/main/res/layout/custom_layout_paymentmenu.xml
+++ b/app/src/main/res/layout/custom_layout_paymentmenu.xml
@@ -6,33 +6,32 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="3dp"
     android:padding="20dp"
-    android:layout_margin="10dp"
-    >
+    android:layout_margin="10dp" >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:weightSum="6"
-        >
+        android:weightSum="6" >
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_custompayment_HinhMon"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="70dp"
-            android:src="@drawable/pic_item"
-            />
+            android:src="@drawable/pic_item" />
 
         <TextView
             android:id="@+id/txt_custompayment_TenMon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Giày adidas bóng đá"
+            android:text="Cơm niêu"
             android:layout_weight="3"
             android:layout_gravity="center"
             android:paddingLeft="7dp"
             android:textSize="16sp"
-            android:textColor="@color/black"
-            />
+            android:textColor="@color/black" />
+
         <TextView
             android:id="@+id/txt_custompayment_SoLuong"
             android:layout_width="0dp"
@@ -44,8 +43,7 @@
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/txt_custompayment_GiaTien"
             android:layout_toLeftOf="@id/txt_custompayment_GiaTien"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txt_custompayment_GiaTien"
@@ -58,8 +56,7 @@
             android:text="12000đ"
             android:textColor="@color/black"
             android:fontFamily="@font/muli_black"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
