--- a/app/src/main/res/layout/detailstatistic_layout.xml
+++ b/app/src/main/res/layout/detailstatistic_layout.xml
@@ -5,21 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.DetailStatisticActivity"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        >
+        android:background="@color/colorPrimary" >
+
         <ImageView
             android:id="@+id/img_detailstatistic_backbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,16 +30,15 @@
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/img_detailstatistic_backbtn"
-            />
+            android:layout_toRightOf="@+id/img_detailstatistic_backbtn" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        >
+        android:padding="15dp" >
+
         <TextView
             android:id="@+id/txt_detailstatistic_MaDon"
             android:layout_width="wrap_content"
@@ -49,8 +47,7 @@
             android:textSize="20sp"
             android:fontFamily="@font/muli_black"
             android:textColor="@color/black"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
         <TextView
             android:id="@+id/txt_detailstatistic_NgayDat"
@@ -75,8 +72,7 @@
         android:numColumns="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingVertical="5dp"
-        >
+        android:paddingVertical="5dp" >
 
     </GridView>
 
@@ -86,8 +82,8 @@
         android:padding="20dp"
         android:background="@drawable/corner_border_black"
         android:layout_margin="5dp"
-        android:elevation="10dp"
-        >
+        android:elevation="10dp" >
+
         <LinearLayout
             android:id="@+id/linearl_info"
             android:layout_width="wrap_content"
@@ -95,18 +91,18 @@
             android:orientation="vertical"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:paddingLeft="10dp"
-            >
+            android:paddingLeft="10dp" >
+
             <TextView
                 android:id="@+id/txt_detailstatistic_TenBan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SHOPEE"
+                android:text="Bàn 1"
                 android:fontFamily="@font/muli"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/txt_detailstatistic_TenNV"
                 android:layout_width="wrap_content"
@@ -116,8 +112,7 @@
                 android:text="Nguyễn Trung Nghĩa"
                 android:fontFamily="@font/muli_black"
                 android:textSize="15sp"
-                android:paddingBottom="5dp"
-                />
+                android:paddingBottom="5dp" />
 
         </LinearLayout>
 
@@ -128,8 +123,8 @@
             android:orientation="vertical"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:paddingRight="10dp"
-            >
+            android:paddingRight="10dp" >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -137,8 +132,8 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/muli"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/txt_detailstatistic_TongTien"
                 android:layout_width="wrap_content"
@@ -148,8 +143,8 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/muli_black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
+
         </LinearLayout>
 
     </RelativeLayout>
