--- a/app/src/main/res/layout/displaycategory_layout.xml
+++ b/app/src/main/res/layout/displaycategory_layout.xml
@@ -2,26 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Danh sách mặt hàng"
+        android:text="Danh sách thực đơn"
         android:textSize="25sp"
         android:fontFamily="@font/muli_black"
         android:padding="10dp"
         android:textAllCaps="true"
         android:textColor="@color/black"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
+
     <GridView
         android:id="@+id/gvCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        android:verticalSpacing="15dp">
-
+        android:verticalSpacing="15dp" >
 
     </GridView>
 
