--- a/app/src/main/res/layout/displayhome_layout.xml
+++ b/app/src/main/res/layout/displayhome_layout.xml
@@ -4,20 +4,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightwhite"
-    >
+    android:background="@color/lightwhite" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="20dp"
-            >
+            android:paddingBottom="20dp" >
 
             <TextView
                 android:layout_gravity="center"
@@ -25,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="Danh mục chức năng"
+                android:text="Danh mục"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -34,35 +31,32 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                />
+                android:paddingLeft="10dp" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
+                    android:layout_marginRight="5dp" >
+
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_ThongKe"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:elevation="8dp"
                         android:layout_margin="10dp"
-                        android:background="@color/colorPrimary"
-                        >
+                        android:background="@color/colorPrimary" >
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:src="@drawable/ic_baseline_calendar_today_24"
-                            android:layout_centerInParent="true"
-                            />
+                            android:layout_centerInParent="true" />
                     </RelativeLayout>
 
                     <TextView
@@ -80,89 +74,87 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
+                    android:layout_marginRight="5dp" >
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_XemBan"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:elevation="8dp"
                         android:layout_margin="10dp"
-                        android:background="@color/colorPrimary"
-                        >
+                        android:background="@color/colorPrimary" >
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:src="@drawable/ic_baseline_flag_24"
-                            android:layout_centerInParent="true"
-                            />
+                            android:layout_centerInParent="true" />
+
                     </RelativeLayout>
+
                     <TextView
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
                         android:gravity="center_horizontal"
-                        android:text="Xem danh khách hàng"
+                        android:text="Danh sách bàn ăn"
                         android:textSize="12sp"
                         android:textColor="@color/black"
-                        android:layout_margin="10dp"
-                        />
+                        android:layout_margin="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
+                    android:layout_marginRight="5dp" >
+
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_XemMenu"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:elevation="8dp"
                         android:layout_margin="10dp"
-                        android:background="@color/colorPrimary"
-                        >
+                        android:background="@color/colorPrimary" >
+
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:src="@drawable/ic_baseline_add_circle_24"
-                            android:layout_centerInParent="true"
-                            />
+                            android:layout_centerInParent="true" />
+
                     </RelativeLayout>
+
                     <TextView
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
                         android:gravity="center_horizontal"
-                        android:text="Thêm sản phẩm"
+                        android:text="Thêm các món ăn"
                         android:textSize="12sp"
                         android:textColor="@color/black"
-                        android:layout_margin="10dp"
-                        />
+                        android:layout_margin="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
+                    android:layout_marginRight="5dp" >
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_XemNV"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:elevation="8dp"
                         android:layout_margin="10dp"
-                        android:background="@color/colorPrimary"
-                        >
+                        android:background="@color/colorPrimary" >
+
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:src="@drawable/ic_baseline_account_circle_24"
-                            android:layout_centerInParent="true"
-                            />
+                            android:layout_centerInParent="true" />
+
                     </RelativeLayout>
+
                     <TextView
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
@@ -171,10 +163,8 @@
                         android:text="Thông tin nhân viên"
                         android:textSize="12sp"
                         android:textColor="@color/black"
-                        android:layout_margin="10dp"
-                        />
+                        android:layout_margin="10dp" />
                 </LinearLayout>
-
 
             </LinearLayout>
 
@@ -185,28 +175,25 @@
             android:layout_height="1dp"
             android:background="@color/grey"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            />
+            android:layout_marginRight="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp"
-            >
+            android:padding="20dp" >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                >
+                android:layout_marginBottom="10dp" >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:fontFamily="@font/muli_black"
-                    android:text="Danh sách mặt hàng"
+                    android:text="Danh sách thực đơn"
                     android:textAllCaps="true"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
@@ -216,8 +203,7 @@
                     android:layout_height="wrap_content"
                     android:text="Xem tất cả >"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    />
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -225,8 +211,7 @@
                 android:id="@+id/rcv_displayhome_LoaiMon"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:clipToPadding="false"
-                />
+                android:clipToPadding="false" />
 
 
         </LinearLayout>
@@ -236,21 +221,18 @@
             android:layout_height="1dp"
             android:background="@color/grey"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            />
+            android:layout_marginRight="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp"
-            >
+            android:padding="20dp" >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                >
+                android:layout_marginBottom="10dp" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -260,16 +242,15 @@
                     android:fontFamily="@font/muli_black"
                     android:textColor="@color/black"
                     android:textAllCaps="true"
-                    android:layout_centerVertical="true"
-                    />
+                    android:layout_centerVertical="true" />
+
                 <TextView
                     android:id="@+id/txt_displayhome_ViewAllStatistic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Xem tất cả >"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    />
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -277,12 +258,10 @@
                 android:id="@+id/rcv_displayhome_DonTrongNgay"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:clipToPadding="false"
-                />
+                android:clipToPadding="false" />
 
         </LinearLayout>
 
     </LinearLayout>
 
 </ScrollView>
-
