--- a/app/src/main/res/layout/displaystaff_layout.xml
+++ b/app/src/main/res/layout/displaystaff_layout.xml
@@ -3,15 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="5dp">
+    android:paddingTop="5dp" >
 
     <GridView
         android:id="@+id/gvStaff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
-        android:verticalSpacing="15dp"
-        >
+        android:verticalSpacing="15dp" >
 
     </GridView>
 
