--- a/app/src/main/res/layout/displaystatistic_layout.xml
+++ b/app/src/main/res/layout/displaystatistic_layout.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <ListView
         android:id="@+id/lvStatistic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
-        android:verticalSpacing="15dp"
-        >
+        android:verticalSpacing="15dp" >
 
     </ListView>
 
