--- a/app/src/main/res/layout/displaytable_layout.xml
+++ b/app/src/main/res/layout/displaytable_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <GridView
         android:id="@+id/gvDisplayTable"
@@ -11,8 +11,8 @@
         android:layout_height="match_parent"
         android:numColumns="2"
         android:background="@color/lightwhite"
-        android:paddingLeft="20dp"
-        >
+        android:paddingLeft="20dp" >
 
     </GridView>
+
 </LinearLayout>
