--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -8,13 +8,12 @@
     android:background="@color/colorPrimary"
     android:padding="30dp"
     android:transitionName="transition_login"
-    android:id="@+id/layoutLogin">
+    android:id="@+id/layoutLogin" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/img_login_backbtn"
@@ -22,8 +21,7 @@
             android:layout_height="wrap_content"
             android:onClick="backFromLogin"
             android:padding="5dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            />
+            android:src="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,14 +31,13 @@
             android:textSize="40sp"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/muli_black"
-            android:textAllCaps="true"
-            />
+            android:textAllCaps="true" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="80dp"
-            >
+            android:layout_marginTop="80dp" >
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_login_TenDN"
                 android:layout_width="match_parent"
@@ -54,17 +51,17 @@
                 app:startIconTint="@color/black"
                 android:textColorHint="@color/black"
                 app:endIconTint="@color/black"
-                app:endIconMode="clear_text"
-                >
+                app:endIconMode="clear_text" >
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textColor="@color/black"
                     android:fontFamily="@font/muli"
-                    android:inputType="text"
-                    />
+                    android:inputType="text" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtl_login_MatKhau"
                 android:layout_width="match_parent"
@@ -78,15 +75,13 @@
                 app:startIconDrawable="@drawable/ic_baseline_lock_24"
                 app:startIconTint="@color/black"
                 app:endIconTint="@color/black"
-                app:endIconMode="password_toggle"
-                >
+                app:endIconMode="password_toggle" >
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textColor="@color/black"
                     android:fontFamily="@font/muli"
-                    android:inputType="textPassword"
-                    />
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,8 +90,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            >
+            android:layout_marginTop="10dp" >
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,8 +98,7 @@
                 android:text="Lưu đăng nhập"
                 android:buttonTint="@color/black"
                 android:layout_centerVertical="true"
-                android:textColor="@color/black"
-                />
+                android:textColor="@color/black" />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -113,8 +106,7 @@
                 android:background="@color/colorPrimary"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                />
+                android:layout_alignParentRight="true" />
 
         </RelativeLayout>
 
@@ -125,8 +117,7 @@
             android:text="@string/login"
             android:textColor="@color/white"
             android:background="@color/black"
-            android:layout_marginTop="20dp"
-            />
+            android:layout_marginTop="20dp" />
         <Button
             android:id="@+id/btn_login_DangKy"
             android:layout_width="match_parent"
@@ -135,8 +126,8 @@
             android:textColor="@color/black"
             android:layout_marginTop="20dp"
             android:onClick="callRegisterFromLogin"
-            android:background="@color/colorPrimary"
-            />
+            android:background="@color/colorPrimary" />
 
     </LinearLayout>
+
 </ScrollView>
