--- a/app/src/main/res/layout/menu_navigation_header.xml
+++ b/app/src/main/res/layout/menu_navigation_header.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    >
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/pic_logo" />
+    android:layout_height="150dp" >
 
     <TextView
         android:id="@+id/txt_menu_tennv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Xin chào !!"
         android:layout_above="@+id/menu_slogan"
         android:layout_marginLeft="20dp"
-        android:textSize="14sp"
-        />
+        android:text="Cơm niêu"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/menu_slogan"
@@ -29,16 +19,16 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="15dp"
-        android:text=":re Thuận Thành"
+        android:text="Thuận Thành"
         android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="200px"
         android:layout_height="wrap_content"
         android:layout_above="@+id/txt_menu_tennv"
         android:layout_alignLeft="@id/txt_menu_tennv"
-        android:src="@drawable/ic_baseline_person_pin_32" />
+        android:src="@drawable/pic_logo" />
 
 </RelativeLayout>
