--- a/app/src/main/res/layout/payment_layout.xml
+++ b/app/src/main/res/layout/payment_layout.xml
@@ -5,22 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.PaymentActivity"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        >
+        android:background="@color/colorPrimary" >
         <ImageView
             android:id="@+id/img_payment_backbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,16 +29,14 @@
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/img_payment_backbtn"
-            />
+            android:layout_toRightOf="@+id/img_payment_backbtn" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        >
+        android:padding="15dp" >
 
         <TextView
             android:id="@+id/txt_payment_TenBan"
@@ -52,7 +47,7 @@
             android:fontFamily="@font/muli_black"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="SHOPEE"
+            android:text="Bàn 1"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
@@ -80,8 +75,7 @@
         android:numColumns="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingVertical="5dp"
-        >
+        android:paddingVertical="5dp" >
 
     </GridView>
 
@@ -91,8 +85,7 @@
         android:padding="20dp"
         android:background="@drawable/corner_border_black"
         android:layout_margin="5dp"
-        android:elevation="10dp"
-        >
+        android:elevation="10dp" >
 
         <LinearLayout
             android:id="@+id/linearl_total"
@@ -100,8 +93,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            >
+            android:layout_marginRight="5dp" >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -109,8 +101,7 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/muli"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/txt_payment_TongTien"
                 android:layout_width="wrap_content"
@@ -120,8 +111,7 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/muli_black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
