--- a/app/src/main/res/layout/register2nd_layout.xml
+++ b/app/src/main/res/layout/register2nd_layout.xml
@@ -6,27 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".Activities.Register2ndActivity"
     android:background="@color/colorPrimary"
-    android:padding="30dp"
-    >
+    android:padding="30dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical" >
+
         <ImageView
             android:id="@+id/img_signup_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_24"
             android:padding="5dp"
-            android:onClick="backFromRegister2nd"
-            />
+            android:onClick="backFromRegister2nd" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content" >
             <TextView
                 android:id="@+id/txt_signup2nd_title"
                 android:layout_width="wrap_content"
@@ -37,8 +34,7 @@
                 android:textSize="40sp"
                 android:textAllCaps="true"
                 android:layout_marginTop="20dp"
-                android:layout_centerVertical="true"
-                />
+                android:layout_centerVertical="true" />
 
             <TextView
                 android:id="@+id/txt_signup2nd_text"
@@ -53,31 +49,27 @@
                 android:text="2/2"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="40dp"
-            >
+            android:layout_marginTop="40dp" >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chọn Giới tính"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
             <RadioGroup
                 android:id="@+id/rg_signup_GioiTinh"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                >
+                android:layout_marginTop="10dp" >
 
                 <RadioButton
                     android:id="@+id/rd_signup_Nam"
@@ -105,24 +97,20 @@
                 android:layout_height="2dp"
                 android:background="@color/black"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                />
+                android:layout_marginBottom="20dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chọn Ngày sinh"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
             <DatePicker
                 android:id="@+id/dt_signup_NgaySinh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:datePickerMode="spinner"
                 android:calendarViewShown="false"
-                android:spinnersShown="true"
-
-                />
+                android:spinnersShown="true" />
 
         </LinearLayout>
 
