--- a/app/src/main/res/layout/displayhome_layout.xml
+++ b/app/src/main/res/layout/displayhome_layout.xml
@@ -34,16 +34,17 @@
                 android:paddingLeft="10dp" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="horizontal" >
 
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp" >
+                    android:layout_marginHorizontal="40dp" >
 
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_ThongKe"
@@ -71,6 +72,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -105,7 +107,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp" >
+                    android:layout_marginRight="5dp"
+                    android:layout_marginHorizontal="40dp">
 
                     <RelativeLayout
                         android:id="@+id/layout_displayhome_XemMenu"
@@ -134,37 +137,7 @@
                         android:layout_margin="10dp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="5dp" >
-                    <RelativeLayout
-                        android:id="@+id/layout_displayhome_XemNV"
-                        android:layout_width="65dp"
-                        android:layout_height="65dp"
-                        android:elevation="8dp"
-                        android:layout_margin="10dp"
-                        android:background="@color/colorPrimary" >
 
-                        <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_baseline_account_circle_24"
-                            android:layout_centerInParent="true" />
-
-                    </RelativeLayout>
-
-                    <TextView
-                        android:layout_width="65dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:gravity="center_horizontal"
-                        android:text="Thông tin nhân viên"
-                        android:textSize="12sp"
-                        android:textColor="@color/black"
-                        android:layout_margin="10dp" />
-                </LinearLayout>
 
             </LinearLayout>
 
