--- a/app/src/main/res/layout/menu_navigation_header.xml
+++ b/app/src/main/res/layout/menu_navigation_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp" >
+    android:layout_height="160dp" >
 
     <TextView
         android:id="@+id/txt_menu_tennv"
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/menu_slogan"
         android:layout_marginLeft="20dp"
-        android:text="Cơm niêu"
+        android:text="Xin chào!"
         android:textSize="14sp" />
 
     <TextView
@@ -25,6 +25,7 @@
         android:textStyle="bold" />
 
     <ImageView
+        android:layout_marginTop="10dp"
         android:layout_width="200px"
         android:layout_height="wrap_content"
         android:layout_above="@+id/txt_menu_tennv"
