--- a/app/src/main/res/layout/displayhome_layout.xml
+++ b/app/src/main/res/layout/displayhome_layout.xml
@@ -43,10 +43,10 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginHorizontal="40dp" >
+                    android:orientation="vertical">
 
                     <RelativeLayout
+                        android:layout_gravity="center"
                         android:id="@+id/layout_displayhome_ThongKe"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
@@ -61,6 +61,7 @@
                     </RelativeLayout>
 
                     <TextView
+                        android:layout_gravity="center"
                         android:layout_width="65dp"
                         android:layout_height="33dp"
                         android:layout_margin="10dp"
@@ -75,24 +76,26 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="5dp" >
+                    android:orientation="vertical">
                     <RelativeLayout
+                        android:layout_gravity="center"
                         android:id="@+id/layout_displayhome_XemBan"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:elevation="8dp"
                         android:layout_margin="10dp"
                         android:background="@color/colorPrimary" >
+
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_baseline_flag_24"
-                            android:layout_centerInParent="true" />
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_baseline_flag_24" />
 
                     </RelativeLayout>
 
                     <TextView
+                        android:layout_gravity="center"
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
@@ -104,13 +107,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginHorizontal="40dp">
+                    android:layout_marginRight="5dp">
 
                     <RelativeLayout
+                        android:layout_gravity="center"
                         android:id="@+id/layout_displayhome_XemMenu"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
@@ -121,12 +125,13 @@
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_baseline_add_circle_24"
-                            android:layout_centerInParent="true" />
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_baseline_add_circle_24" />
 
                     </RelativeLayout>
 
                     <TextView
+                        android:layout_gravity="center"
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
